--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,11 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.hibernate:hibernate-core:5.4.1.Final'
+    compile 'org.hibernate:hibernate-entitymanager:5.4.1.Final'
+    compile "com.sparkjava:spark-core:2.7.2"
+    compile "com.sparkjava:spark-template-thymeleaf:2.7.1"
+    compile group: 'com.h2database', name: 'h2', version: '1.4.194'
+    compile group: 'org.jasypt', name: 'jasypt', version: '1.9.2'
+    compile group: 'com.maxmind.geoip2', name: 'geoip2', version: '2.12.0'
 }
