arreglando los servicios y persistencia

--- a/build.gradle
+++ b/build.gradle
@@ -22,4 +22,10 @@ dependencies {
     compile group: 'com.h2database', name: 'h2', version: '1.4.194'
     compile group: 'org.jasypt', name: 'jasypt', version: '1.9.2'
     compile group: 'com.maxmind.geoip2', name: 'geoip2', version: '2.12.0'
+    compile group: 'org.eclipse.jetty', name: 'jetty-http-spi', version: '9.4.4.v20170414'
+    compile group: 'org.webjars', name: 'bootstrap', version: '3.3.7-1'
+    compile "org.slf4j:slf4j-simple:1.7.21"
+    compile 'org.jasypt:jasypt:1.9.2'
+    compile group: 'org.hibernate', name: 'hibernate-validator', version: '4.2.0.Final'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
 }
