--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.simpleframework', name: 'simple-xml', version: '2.7.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.hibernate:hibernate-core:5.4.1.Final'
@@ -25,6 +26,7 @@ dependencies {
     compile group: 'org.eclipse.jetty', name: 'jetty-http-spi', version: '9.4.4.v20170414'
     compile group: 'org.webjars', name: 'bootstrap', version: '3.3.7-1'
     compile "org.slf4j:slf4j-simple:1.7.21"
+    compile 'com.sparkjava:spark-template-freemarker:2.7.1'
     compile 'org.jasypt:jasypt:1.9.2'
     compile group: 'org.hibernate', name: 'hibernate-validator', version: '4.2.0.Final'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
