--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,13 @@ plugins {
 group 'com.roodwally'
 version '1.0-SNAPSHOT'
 
+apply plugin: 'application'
+
 sourceCompatibility = 1.8
+
+mainClassName = "main.Main"
+
+defaultTasks 'run'
 
 repositories {
     mavenCentral()
@@ -30,4 +36,17 @@ dependencies {
     compile 'org.jasypt:jasypt:1.9.2'
     compile group: 'org.hibernate', name: 'hibernate-validator', version: '4.2.0.Final'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
+}
+
+
+jar {
+    manifest {
+        attributes "Main-Class": "$mainClassName"
+    }
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+
+    archiveName "app.jar"
 }
